syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.jogit.server.grpc";
option java_outer_classname = "RegisterProto";
package helloworld;

service Register {
  rpc Register (RegisterRequest) returns (RegisterReply) {}
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string sessionToken = 3;
}

message RegisterReply {
  string sessionToken = 1;
}
